--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -346,7 +346,7 @@
 
     <div class="copyright">© Company policy and privacy rules</div>
 
-    <div class="telegram-container">
+    <div class="circle-container telegram-container">
         <div
                 class="telegram"
                 onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
@@ -356,7 +356,7 @@
         </div>
     </div>
 
-    <div class="instagram-container">
+    <div class="circle-container instagram-container">
         <div
                 class="instagram"
                 onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
