--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -62,29 +62,23 @@ body {
     text-decoration: none;
 }
 
-.user1{
+.heart, .user {
     width: 3.6458vw;
-    height: 5.555vh;
+    height: 5.5555vh;
 }
 
-.heart, .user {
+.heart-container, .user-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: all 0.2s;
-}
-
-.heart:hover, .user1:hover {
     border-radius: 50%;
+}
+
+.user-container:hover, .heart-container:hover {
     background-color: #733506;
-    width: 5.2083vw;
-    height: 9.2592vh;
+    width: 4.6vw;
+    height: 9.2593vh;
 }
-
-.heart:hover path, .user:hover path {
-    fill: #F2E3B3;
-}
-
 .home{
     height: 5.55555555vh;
     width: 3.125vw;
