--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -2,8 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>all</title>
+    <title>All recipes</title>
+    <link rel="stylesheet" type="text/css" href="../../static/css/allRecipes.css" th:href="@{css/allRecipes.css}">
+    <script  src="../../static/js/scripts.js"></script>
 </head>
+<header>
+    <div class="header">
+        <img th:src="@{images/logo1.svg}" src="../../static/images/logo1.svg" alt = "logo1" class = "logo1">
+
+
+        <form class="search-form">
+            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+            <input name="query" placeholder="Search" type="search">
+        </form>
+        <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
+        <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
+
+        <div class="heart-container">
+            <div class="heart"
+                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
+                 onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
+                <img id="heart-img" src="../../static/images/heart.svg" alt="heart" class="heart">
+            </div>
+        </div>
+
+        <div class="user-container">
+            <div class="user"
+                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
+                 onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
+
+                <img id="user-img" src="../../static/images/user.svg" alt="user" class="user">
+            </div>
+        </div>
+
+        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
+    </div>
+
+</header>
 <body>
 <table th:each="recipe: ${recipes}">
     <tr>
