--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -21,17 +21,17 @@
     <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
 
     <div class="heart-container">
-        <div class="heart">
+        <div class="heart"
                 onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
-                onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')"
+                onmouseout="restoreImage('heart-img', '../../static/images/heart.svg')">
             <img id="heart-img" src="../../static/images/heart.svg" alt="heart" class="heart">
         </div>
     </div>
 
     <div class="user-container">
-        <div class="user">
+        <div class="user"
                 onmouseover="changeImage('user-img', '../../static/images/user-hover.svg')"
-                onmouseout="restoreImage('user-img', '../../static/images/user.svg')"
+                onmouseout="restoreImage('user-img', '../../static/images/user.svg')">
 
             <img id="user-img" src="../../static/images/user.svg" alt="user" class="user">
         </div>
@@ -121,17 +121,35 @@
 </main>
 
 <footer class="footer">
-    <button class="support-button"><span>Support</span></button>
+    <button class="support-button" id="support-btn"><span>Support</span></button>
+
+    <div id="overlay" onclick="hideOverlay()"></div>
+
+    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
+        <div class="inner-window">
+            <input name="query" placeholder="Enter feedback" type="search">
+        </div>
+
+        <button id="send-button">Send</button>
+    </div>
 
     <div class="copyright">© Company policy and privacy rules</div>
-    <div class="telegram">
-        <div class="circle-container circle ">
-            <img alt="telegram1" class="telegram1" src="../../static/images/telegram.svg" >
+
+    <div class="circle-container telegram-container">
+        <div
+                class="telegram"
+                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')">
+            <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
-    <div class="instagram">
-        <div class="circle-container circle ">
-                <img alt="instagram1" class="instagram1" src="../../static/images/inst.svg" >
+
+    <div class="circle-container instagram-container">
+        <div
+                class="instagram"
+                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')">
+            <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
 </footer>
