--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -121,7 +121,7 @@
 </main>
 
 <footer class="footer">
-    <button class="support-button" id="support-btn"><span>Support</span></button>
+    <button class="support-button" id="support-button"><span>Support</span></button>
 
     <div id="overlay" onclick="hideOverlay()"></div>
 
