Only the board remains

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -89,3 +89,195 @@ body {
     justify-content: space-between;
     align-items: flex-start;
 }
+/*____________________________________________________________________________________________________________________*/
+
+.board{
+    width: 18vw; /*280*/
+    height:76vh; /*820*/
+    margin-top: 3.5vh;
+}
+
+.bean {
+    position: absolute;
+    width: 2vw;/*35*/
+    height: 4.8vh;/*45*/
+    left: 6.3vw;
+    top: 69vh;
+}
+/*____________________________________________________________________________________________________________________*/
+.field {
+    width: 80vw;
+    height: 76vh;
+    left: 22vw;
+    right: 2vw;
+    top: 8vh;
+    bottom: 8vh;
+    border-radius: 60px;
+    color: #F2E3B3;
+}
+/*____________________________________________________________________________________________________________________*/
+.footer {
+position: fixed;
+width: 100%;
+height: 5.6vh;
+top: 94.4vh;
+bottom: 0;
+background-color: #3E5902;
+color: #F2E3B3;
+padding: 1.4vh;
+display: flex;
+left: 0;
+justify-content: space-between;
+z-index: 5;
+}
+
+
+#send-button {
+    position: absolute;
+    right: 90px;
+    width: 173px;
+    height: 46px;
+    background-color: #3E5902;
+    border-radius: 30px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
+    font-size: 1.25vw;
+    color: #FBEFC7;
+    border: none;
+    top: 400px;
+    bottom: 16px;
+    z-index: 15;
+}
+
+#send-button:hover {
+    background-color: #FBEFC7;
+    color: #3E5902;
+    border: 5px solid #3E5902;
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.window {
+    position: fixed;
+    display: none;
+    bottom: 9.2593vh;
+    left: 9.6vh;
+    width: 59.375vw;
+    height: 43.056vh;
+    background: #F2E3B3;
+    padding: 0.02vw;
+    z-index: 11;
+    border-radius: 60px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.inner-window {
+    background: #FBEFC7;
+    position: absolute;
+    width: 55.2083vw;
+    height: 31.945vh;
+    left: 2.1354167vw;
+    top: 3.5185vh;
+    padding-left: 0.01vw;
+    border-radius: 30px;
+    z-index: 13;
+}
+
+.support-button {
+    position: relative;
+    left: 4.6875vw;
+    bottom: 0.6481vh;
+    background-color: #F2E3B3;
+    color: #733506;
+    border-radius: 30px;
+    padding: 0.19vw;
+    width: 8.4375vw;
+    height: 4.2593vh;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
+    font-size: 1.25vw;
+    font-weight: 400;
+    line-height: 4.2593vh;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+.support-button span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.support-button:hover {
+    background-color: transparent;
+    border: 5px solid #F2E3B3;
+    color: #F2E3B3;
+}
+
+#feedback-input {
+    width: 100%;
+    height: 100px;
+    border: none;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.circle-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F2E3B3;
+    border-radius: 50%;
+    width: 2.4vw;
+    height: 5vh;
+    bottom: 1vh;
+}
+
+.telegram-container {
+    right: 5vw;
+}
+
+.instagram-container {
+    right: 3vw;
+}
+
+.telegram {
+    width: 2.39583vw;
+    height: 4.2592vh;
+}
+
+.instagram{
+    width: 2.3vw;
+    height: 4.06vh;
+}
+
+.telegram-container:hover, .instagram-container:hover {
+    background-color: #733506;
+}
+.copyright {
+    position: static;
+    width: 21vw;
+    height: 3vh;
+    margin: auto;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
+    font-size: 1.25vw;
+    font-weight: 400;
+    line-height: 1vh;
+    text-align: left;
+    color: #F2E3B3;
+}
