--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -167,6 +167,7 @@ ul hr {
     width: 14.584vw; /*280*/
     height:75.926vh; /*820*/
     margin-right: 2.5vw;
+    margin-top: 1vh;
 }
 
 .fieldForCategory{
