--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -17,7 +17,7 @@
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
-
+        <a class="home" href="main.html" th:href="@{main}" > </a>
         <div class="heart-container">
             <div class="heart"
                  onmouseover="changeImage('heart-img', '../../static/images/heart-hover.svg')"
@@ -35,11 +35,52 @@
             </div>
         </div>
 
-        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
+        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
     </div>
 
 </header>
 <body>
+
+<main>
+    <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
+<!--    <div class="ul">-->
+<!--        <ul>-->
+<!--            <h1 class="h1">Categories</h1>-->
+<!--            <li><img alt="substance" class="substance" th:src="@{images/Soup.svg}"  src="../../static/images/Soup.svg" >-->
+<!--                First dishes</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" >-->
+<!--                Main dishes</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="salad" class="saladI" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >-->
+<!--                Salads</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="pastry" class="pastryI" th:src="@{images/PastryI.svg}" src="../../static/images/PastryI.svg" >-->
+<!--                Pastry</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="dessertI" class="dessertI" th:src="@{images/Waffles.svg}" src="../../static/images/Waffles.svg" >-->
+<!--                Desserts</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="smoothieI" class="smoothieI" th:src="@{images/Smoothie.svg}" src="../../static/images/Smoothie.svg" >-->
+<!--                Drinks</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="snackI" class="snackI" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >-->
+<!--                Snacks</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="fish" class="fish" th:src="@{images/Fish.svg}" src="../../static/images/Fish.svg" >-->
+<!--                Fish dishes</li>-->
+<!--            <hr>-->
+<!--            <li><img alt="sauce" class="sauceI" th:src="@{images/SauceSelection.svg}" src="../../static/images/SauceSelection.svg" >-->
+<!--                Sauces</li>-->
+<!--            <hr>-->
+<!--        </ul>-->
+<!--    </div>-->
+    <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
+    <div class="field">
+        <!-- Сюди можна додати вміст вашого поля -->
+        <p>Це ваше поле. Додайте сюди вміст.</p>
+    </div>
+</main>
 <table th:each="recipe: ${recipes}">
     <tr>
         <td th:text="${recipe.getCategory().getTitle()}"></td>
@@ -55,4 +96,37 @@
     </tr>
 </table>
 </body>
+<footer class="footer">
+    <button class="support-button" id="support-button"><span>Support</span></button>
+
+    <div id="overlay" onclick="hideOverlay()"></div>
+
+    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
+        <div class="inner-window">
+            <input name="query" placeholder="Enter feedback" type="search">
+        </div>
+
+        <button id="send-button">Send</button>
+    </div>
+
+    <div class="copyright">© Company policy and privacy rules</div>
+
+    <div class="circle-container telegram-container">
+        <div
+                class="telegram"
+                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')">
+            <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
+        </div>
+    </div>
+
+    <div class="circle-container instagram-container">
+        <div
+                class="instagram"
+                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')">
+            <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
+        </div>
+    </div>
+</footer>
 </html>
