Only the board remains

--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -101,20 +101,21 @@ body {
     position: absolute;
     width: 2vw;/*35*/
     height: 4.8vh;/*45*/
-    left: 6.3vw;
-    top: 69vh;
+    left: 8vw;
+    top: 82vh;
 }
 /*____________________________________________________________________________________________________________________*/
 .field {
+    position: absolute;
     width: 80vw;
     height: 76vh;
-    left: 22vw;
     right: 2vw;
-    top: 8vh;
+    top: 14.6vh;
     bottom: 8vh;
     border-radius: 60px;
-    color: #F2E3B3;
+    background-color: #F2E3B3;
 }
+
 /*____________________________________________________________________________________________________________________*/
 .footer {
 position: fixed;
