--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -172,17 +172,17 @@ ul hr {
 }
 
 .fieldForCategory{
-    width: 12.5vw; /*240*/
-    height:66.67vh; /*720*/
+    width: 12.5vw;
+    height:66.67vh;
     margin-right: 2.344vw;
 }
 
-.substance{
+.soup{
     width: 2.65625vw;
     height:5.5556vh;
 }
 
-.mDIcon{
+.mainDishIcon{
     width: 2.05vw;
     height:2.7vh;
 }
@@ -191,6 +191,7 @@ ul hr {
     width: 2.0833vw;
     height:4.167vh;
 }
+
 .pastry{
     width: 2.34375vw;
     height: 3.24075vh;
@@ -205,6 +206,7 @@ ul hr {
     width: 2.34375vw;
     height: 4.1667vh;
 }
+
 .snack{
     width: 2.34375vw;/*45*/
     height: 2.7778vh;/*30*/
@@ -227,7 +229,6 @@ ul hr {
     left: 6.3vw;
     top: 69vh;
 }
-
 
 .cheesecake {
     position: absolute;
@@ -300,7 +301,7 @@ ul hr {
 }
 
 .dessert:hover .cheesecake, .dessert:hover .rectangle-left-1 {
-    border: 5px solid #733506;
+    border: 0.46vh solid #733506;
 }
 
 .rectangle-left-2 {
@@ -308,7 +309,7 @@ ul hr {
 }
 
 .drink:hover .fresh, .drink:hover .rectangle-left-2 {
-    border: 5px solid #733506;
+    border: 0.46vh solid #733506;
 }
 
 .rectangle-left-3 {
@@ -316,7 +317,7 @@ ul hr {
 }
 
 .salad:hover .seafoodSalad, .salad:hover .rectangle-left-3 {
-    border: 5px solid #733506;
+    border: 0.46vh solid #733506;
 }
 
 .rectangleFD {
@@ -336,7 +337,7 @@ ul hr {
 }
 
 .firstD:hover .rectangleFD, .firstDish:hover {
-    border: 5px solid #733506;
+    border: 0.46vh solid #733506;
 }
 
 .rectangleMD {
@@ -350,38 +351,13 @@ ul hr {
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
-    font-family: 'Frank Ruhl Libre';
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 3.8888vh;
     font-size: 2.1875vw;
 }
 
 .mainD:hover .rectangleMD, .mainDish:hover {
-    border: 5px solid #733506;
-}
-
-.copyrightm {
-    position: absolute;
-    left: 240px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-
-    color: #000000;
-}
-
-.copyrightf {
-    position: absolute;
-    left: 410px;
-    bottom: -18px;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 42px;
-    font-weight: 600;
-    line-height: 31px;
-    color: #000000;
+    border: 0.46vh solid #733506;
 }
 
 .footer {
@@ -457,7 +433,7 @@ ul hr {
 #send-button:hover {
     background-color: #FBEFC7;
     color: #3E5902;
-    border: 5px solid #3E5902;
+    border: 0.46vh solid #3E5902;
 }
 
 .support-button {
@@ -490,7 +466,7 @@ ul hr {
 
 .support-button:hover {
     background-color: transparent;
-    border: 5px solid #F2E3B3;
+    border: 0.46vh solid #F2E3B3;
     color: #F2E3B3;
 }
 
@@ -527,6 +503,7 @@ ul hr {
 .telegram-container:hover, .instagram-container:hover {
     background-color: #733506;
 }
+
 .copyright {
     position: static;
     width: 21vw;
