--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -106,14 +106,14 @@
         <div class="firstD">
             <img alt="firstDish" class="firstDish" th:src="@{images/firstD.jpg}" src="../../static/images/firstD.jpg">
             <div class="rectangleFD">
-                <img alt="substance" class="substance" th:src="@{images/Soup.svg}" src="../../static/images/Soup.svg" > First dishes
+                <img alt="soup" class="soup" th:src="@{images/Soup.svg}" src="../../static/images/Soup.svg" > First dishes
             </div>
         </div>
 
         <div class="mainD">
             <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/mainD.jpg">
             <div class="rectangleMD">
-                <img alt="mDIcon" class="mDIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" > Main dishes
+                <img alt="mainDishIcon" class="mainDishIcon" th:src="@{images/mainDish.svg}" src="../../static/images/mainDish.svg" > Main dishes
             </div>
         </div>
     </div>
