Only the board remains

--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -36,6 +36,7 @@
         </div>
 
         <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
+        <a href = "main.html" th:href="@{images/home.svg}">
     </div>
 
 </header>
