Only the board remains

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -122,7 +122,7 @@
 </main>
 
 <footer class="footer">
-    <button class="support-button" id="support-button"><span>Support</span></button>
+    <button class="support-button" id="support-btn"><span>Support</span></button>
 
     <div id="overlay" onclick="hideOverlay()"></div>
 
@@ -140,7 +140,8 @@
         <div
                 class="telegram"
                 onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
-                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')">
+                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
+        >
             <img id="telegram-img" src="../../static/images/telegram.svg" alt="telegram" class="telegram">
         </div>
     </div>
@@ -149,7 +150,8 @@
         <div
                 class="instagram"
                 onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')">
+                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
+        >
             <img id="instagram-img" src="../../static/images/inst.svg" alt="instagram" class="instagram">
         </div>
     </div>
