--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -39,7 +39,7 @@ body {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.5vh;
     font-size: 2.5vw;
-    border-radius: 30px;
+    border-radius: 2.7vw;
     outline: none;
 }
 
@@ -80,6 +80,7 @@ body {
     width: 4.6vw;
     height: 9.2593vh;
 }
+
 .home{
     height: 5.55555555vh;
     width: 3.125vw;
@@ -132,11 +133,17 @@ ul {
 }
 
 ul li {
-
     list-style: none;
     padding-left: 0.2605vw;
     margin-left: 0.4vw;
     margin-right: 0.7vw;
+}
+
+ul li:hover {
+    background-color: #F2B705;
+    border-radius: 5.5vw;
+    height: 5vh;
+    width: 9.3vw;
 }
 
 ul hr {
@@ -327,7 +334,7 @@ ul hr {
     width: 43.69vw;
     top: 43vh;
     margin-right: 2.344vw;
-    border-radius: 0px 0px 7.8vh 7.8vh;
+    border-radius: 0vh 0vh 7.8vh 7.8vh;
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
@@ -348,7 +355,7 @@ ul hr {
     top: 83.70vh;
     left: 66.275vw;
     margin-right: 2.344vw;
-    border-radius: 0px 0px 7.8vh 7.8vh;
+    border-radius: 0vh 0vh 7.8vh 7.8vh;
     background: #F2E3B3;
     z-index: 2;
     text-align: center;
@@ -419,7 +426,7 @@ ul hr {
     width: 173px;
     height: 46px;
     background-color: #3E5902;
-    border-radius: 30px;
+    border-radius: 2.7vw;
     text-align: center;
     font-family: 'Frank Ruhl Libre';
     font-size: 1.25vh;
