removed gaps for clear code

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -104,7 +104,7 @@ body {
 
 .h1 {
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 2.1875vw; /*42*/
+    font-size: 2.1875vw;
     font-size: 3.8889vh;
     color: #733506;
     position: absolute;
@@ -124,7 +124,6 @@ body {
     overflow-x: hidden;
     padding-left: 0.2605vw;
     margin-top: 1vh;
-
 }
 
 ul {
@@ -152,7 +151,6 @@ ul hr {
     margin-left: 0.5vw;
     margin-right: 0.6vw;
 }
-
 
 ::-webkit-scrollbar {
     width: 0.78125vw;
