--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -138,9 +138,16 @@ ul li {
     margin-right: 0.7vw;
 }
 
+ul li:hover {
+    background-color: #F2B705;
+    border-radius: 5.5vw;
+    height: 5vh;
+    width: 9.3vw;
+} /*hover for menu list elements*/
+
 ul hr {
     border: 0.104167vw solid black;
-    margin: 0.520834vw 0;
+    margin: 0.520834vw ;
     margin-left: 0.5vw;
     margin-right: 0.6vw;
 }
